--- a/CatchMe/AudioSettings.xib
+++ b/CatchMe/AudioSettings.xib
@@ -12,6 +12,7 @@
 		</object>
 		<array key="IBDocument.IntegratedClassDependencies">
 			<string>IBProxyObject</string>
+			<string>IBUIBarButtonItem</string>
 			<string>IBUIButton</string>
 			<string>IBUILabel</string>
 			<string>IBUINavigationBar</string>
@@ -38,30 +39,39 @@
 				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">1316</int>
 				<array class="NSMutableArray" key="NSSubviews">
-					<object class="IBUINavigationBar" id="961975538">
+					<object class="IBUINavigationBar" id="218826125">
 						<reference key="NSNextResponder" ref="380026005"/>
 						<int key="NSvFlags">1314</int>
 						<string key="NSFrame">{{0, 20}, {320, 44}}</string>
 						<reference key="NSSuperview" ref="380026005"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="420892818"/>
+						<reference key="NSNextKeyView" ref="694893100"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+						<int key="IBUIBarStyle">1</int>
 						<array class="NSMutableArray" key="IBUIItems">
-							<object class="IBUINavigationItem" id="100757968">
-								<reference key="IBUINavigationBar" ref="961975538"/>
+							<object class="IBUINavigationItem" id="838778331">
+								<reference key="IBUINavigationBar" ref="218826125"/>
 								<string key="IBUITitle">Audio Message Settings</string>
+								<object class="IBUIBarButtonItem" key="IBUILeftBarButtonItem" id="314841396">
+									<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+									<int key="IBUIStyle">1</int>
+									<reference key="IBUINavigationItem" ref="838778331"/>
+									<object class="NSColor" key="IBUITintColor">
+										<int key="NSColorSpace">3</int>
+										<bytes key="NSWhite">MC42NjY2NjY2NjY3AA</bytes>
+									</object>
+									<int key="IBUISystemItemIdentifier">0</int>
+								</object>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 							</object>
 						</array>
 					</object>
-					<object class="IBUIButton" id="919204451">
+					<object class="IBUIButton" id="118970371">
 						<reference key="NSNextResponder" ref="380026005"/>
 						<int key="NSvFlags">1316</int>
 						<string key="NSFrame">{{20, 378}, {134, 37}}</string>
 						<reference key="NSSuperview" ref="380026005"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="1020199220"/>
+						<reference key="NSNextKeyView" ref="440762366"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -69,7 +79,7 @@
 						<int key="IBUIContentVerticalAlignment">0</int>
 						<int key="IBUIButtonType">1</int>
 						<string key="IBUINormalTitle">Start Recording</string>
-						<object class="NSColor" key="IBUIHighlightedTitleColor" id="1050011450">
+						<object class="NSColor" key="IBUIHighlightedTitleColor" id="572863876">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MQA</bytes>
 						</object>
@@ -77,27 +87,26 @@
 							<int key="NSColorSpace">1</int>
 							<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
 						</object>
-						<object class="NSColor" key="IBUINormalTitleShadowColor" id="510645963">
+						<object class="NSColor" key="IBUINormalTitleShadowColor" id="687302663">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MC41AA</bytes>
 						</object>
-						<object class="IBUIFontDescription" key="IBUIFontDescription" id="13619077">
+						<object class="IBUIFontDescription" key="IBUIFontDescription" id="219049663">
 							<int key="type">2</int>
 							<double key="pointSize">15</double>
 						</object>
-						<object class="NSFont" key="IBUIFont" id="213515688">
+						<object class="NSFont" key="IBUIFont" id="1036874191">
 							<string key="NSName">Helvetica-Bold</string>
 							<double key="NSSize">15</double>
 							<int key="NSfFlags">16</int>
 						</object>
 					</object>
-					<object class="IBUIButton" id="1020199220">
+					<object class="IBUIButton" id="440762366">
 						<reference key="NSNextResponder" ref="380026005"/>
 						<int key="NSvFlags">1316</int>
 						<string key="NSFrame">{{162, 378}, {138, 37}}</string>
 						<reference key="NSSuperview" ref="380026005"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="394068419"/>
+						<reference key="NSNextKeyView" ref="221301872"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -105,22 +114,21 @@
 						<int key="IBUIContentVerticalAlignment">0</int>
 						<int key="IBUIButtonType">1</int>
 						<string key="IBUINormalTitle">Stop Recording</string>
-						<reference key="IBUIHighlightedTitleColor" ref="1050011450"/>
+						<reference key="IBUIHighlightedTitleColor" ref="572863876"/>
 						<object class="NSColor" key="IBUINormalTitleColor">
 							<int key="NSColorSpace">1</int>
 							<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
 						</object>
-						<reference key="IBUINormalTitleShadowColor" ref="510645963"/>
-						<reference key="IBUIFontDescription" ref="13619077"/>
-						<reference key="IBUIFont" ref="213515688"/>
+						<reference key="IBUINormalTitleShadowColor" ref="687302663"/>
+						<reference key="IBUIFontDescription" ref="219049663"/>
+						<reference key="IBUIFont" ref="1036874191"/>
 					</object>
-					<object class="IBUIButton" id="394068419">
+					<object class="IBUIButton" id="221301872">
 						<reference key="NSNextResponder" ref="380026005"/>
 						<int key="NSvFlags">1316</int>
 						<string key="NSFrame">{{20, 423}, {134, 37}}</string>
 						<reference key="NSSuperview" ref="380026005"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="267912113"/>
+						<reference key="NSNextKeyView" ref="433530102"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -128,22 +136,20 @@
 						<int key="IBUIContentVerticalAlignment">0</int>
 						<int key="IBUIButtonType">1</int>
 						<string key="IBUINormalTitle">Play Recording</string>
-						<reference key="IBUIHighlightedTitleColor" ref="1050011450"/>
+						<reference key="IBUIHighlightedTitleColor" ref="572863876"/>
 						<object class="NSColor" key="IBUINormalTitleColor">
 							<int key="NSColorSpace">1</int>
 							<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
 						</object>
-						<reference key="IBUINormalTitleShadowColor" ref="510645963"/>
-						<reference key="IBUIFontDescription" ref="13619077"/>
-						<reference key="IBUIFont" ref="213515688"/>
+						<reference key="IBUINormalTitleShadowColor" ref="687302663"/>
+						<reference key="IBUIFontDescription" ref="219049663"/>
+						<reference key="IBUIFont" ref="1036874191"/>
 					</object>
-					<object class="IBUIButton" id="267912113">
+					<object class="IBUIButton" id="433530102">
 						<reference key="NSNextResponder" ref="380026005"/>
 						<int key="NSvFlags">1316</int>
 						<string key="NSFrame">{{162, 423}, {138, 37}}</string>
 						<reference key="NSSuperview" ref="380026005"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -151,22 +157,21 @@
 						<int key="IBUIContentVerticalAlignment">0</int>
 						<int key="IBUIButtonType">1</int>
 						<string key="IBUINormalTitle">Save Recording</string>
-						<reference key="IBUIHighlightedTitleColor" ref="1050011450"/>
+						<reference key="IBUIHighlightedTitleColor" ref="572863876"/>
 						<object class="NSColor" key="IBUINormalTitleColor">
 							<int key="NSColorSpace">1</int>
 							<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
 						</object>
-						<reference key="IBUINormalTitleShadowColor" ref="510645963"/>
-						<reference key="IBUIFontDescription" ref="13619077"/>
-						<reference key="IBUIFont" ref="213515688"/>
+						<reference key="IBUINormalTitleShadowColor" ref="687302663"/>
+						<reference key="IBUIFontDescription" ref="219049663"/>
+						<reference key="IBUIFont" ref="1036874191"/>
 					</object>
-					<object class="IBUILabel" id="420892818">
+					<object class="IBUILabel" id="694893100">
 						<reference key="NSNextResponder" ref="380026005"/>
 						<int key="NSvFlags">1316</int>
 						<string key="NSFrame">{{31, 280}, {258, 90}}</string>
 						<reference key="NSSuperview" ref="380026005"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="919204451"/>
+						<reference key="NSNextKeyView" ref="118970371"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -196,8 +201,7 @@
 				<object class="NSPSMatrix" key="NSFrameMatrix"/>
 				<string key="NSFrameSize">{320, 480}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
-				<reference key="NSNextKeyView" ref="961975538"/>
+				<reference key="NSNextKeyView" ref="218826125"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">1</int>
 					<bytes key="NSRGB">MSAxIDEAA</bytes>
@@ -223,12 +227,12 @@
 						<int key="objectID">2</int>
 						<reference key="object" ref="380026005"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="961975538"/>
-							<reference ref="394068419"/>
-							<reference ref="267912113"/>
-							<reference ref="919204451"/>
-							<reference ref="1020199220"/>
-							<reference ref="420892818"/>
+							<reference ref="221301872"/>
+							<reference ref="433530102"/>
+							<reference ref="440762366"/>
+							<reference ref="694893100"/>
+							<reference ref="218826125"/>
+							<reference ref="118970371"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -244,42 +248,50 @@
 						<reference key="parent" ref="0"/>
 					</object>
 					<object class="IBObjectRecord">
+						<int key="objectID">13</int>
+						<reference key="object" ref="694893100"/>
+						<reference key="parent" ref="380026005"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">12</int>
+						<reference key="object" ref="433530102"/>
+						<reference key="parent" ref="380026005"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">11</int>
+						<reference key="object" ref="221301872"/>
+						<reference key="parent" ref="380026005"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">10</int>
+						<reference key="object" ref="440762366"/>
+						<reference key="parent" ref="380026005"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">9</int>
+						<reference key="object" ref="118970371"/>
+						<reference key="parent" ref="380026005"/>
+					</object>
+					<object class="IBObjectRecord">
 						<int key="objectID">3</int>
-						<reference key="object" ref="961975538"/>
+						<reference key="object" ref="218826125"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="100757968"/>
+							<reference ref="838778331"/>
 						</array>
 						<reference key="parent" ref="380026005"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">7</int>
-						<reference key="object" ref="100757968"/>
-						<reference key="parent" ref="961975538"/>
+						<reference key="object" ref="838778331"/>
+						<array class="NSMutableArray" key="children">
+							<reference ref="314841396"/>
+						</array>
+						<reference key="parent" ref="218826125"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">9</int>
-						<reference key="object" ref="919204451"/>
-						<reference key="parent" ref="380026005"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">10</int>
-						<reference key="object" ref="1020199220"/>
-						<reference key="parent" ref="380026005"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">11</int>
-						<reference key="object" ref="394068419"/>
-						<reference key="parent" ref="380026005"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">12</int>
-						<reference key="object" ref="267912113"/>
-						<reference key="parent" ref="380026005"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">13</int>
-						<reference key="object" ref="420892818"/>
-						<reference key="parent" ref="380026005"/>
+						<int key="objectID">26</int>
+						<reference key="object" ref="314841396"/>
+						<reference key="parent" ref="838778331"/>
 					</object>
 				</array>
 			</object>
@@ -298,6 +310,7 @@
 				</object>
 				<dictionary class="NSMutableDictionary" key="2.IBAttributePlaceholdersKey"/>
 				<string key="2.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="26.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="3.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="7.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="9.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -306,7 +319,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">14</int>
+			<int key="maxID">27</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
